# nlp-mtect-analyse-citoyenne

./: .gitignore  README.md  classifier_metrics.py  comment_sentiment_classifier.py  data_preprocessor.py  main.py  pyproject.toml  quantitative_analyser.py  reduce_chain.py  reduce_chain_thread.py  requirements.txt  sagemaker_endpoint.py  toxic_message_detector.py
Exemple 1/: 02-projet_d_arrete_effacement_de_clotures_vf.docx  2024_01_03_-_note-presentation-projet-d_arrete-declaration-effacement-clotures_vf.docx  data.csv  data_ia.csv
Exemple 2/: data.csv
Exemple 3/: data.csv  data_2.csv
Exemple 4/: cetace.csv
